[gd_scene load_steps=3 format=3 uid="uid://sfhlwrngrqs2"]

[ext_resource type="Script" path="res://scripts/resourceCardNode.gd" id="1_pnh3l"]
[ext_resource type="Texture2D" uid="uid://b02ay7mvwgk2q" path="res://icon.svg" id="2_o1fuo"]

[node name="ResourceCard" type="Node3D"]
script = ExtResource("1_pnh3l")

[node name="RigidBody3D" type="RigidBody3D" parent="."]

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="RigidBody3D"]
depth = 0.2
polygon = PackedVector2Array(1, 1.5, 1, -1.5, -1, -1.5, -1, 1.5)
margin = 0.001

[node name="Sprite3D" type="Sprite3D" parent="RigidBody3D"]
transform = Transform3D(1.6, 0, 0, 0, 2.4, 0, 0, 0, 2, 0, 0, 0)
texture = ExtResource("2_o1fuo")

[node name="TableDetectionArea" type="Area3D" parent="RigidBody3D"]
visible = false

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="RigidBody3D/TableDetectionArea"]
depth = 0.5
polygon = PackedVector2Array(1.5, 2.25, 1.5, -2.25, -1.5, -2.25, -1.5, 2.25)
margin = 0.001

[connection signal="mouse_entered" from="RigidBody3D" to="." method="_on_rigid_body_3d_mouse_entered"]
[connection signal="mouse_exited" from="RigidBody3D" to="." method="_on_rigid_body_3d_mouse_exited"]
[connection signal="area_entered" from="RigidBody3D/TableDetectionArea" to="." method="_on_table_detection_area_area_entered"]
